--- a/style.css
+++ b/style.css
@@ -281,14 +281,33 @@ nav ul li a:hover::after{
 /*------------Finished Skills section-----------------*/
 
 .connect-left{
-    flex-basis:35%;
+    flex-basis: 1000%;
 }
 
-.connect-left{
-    flex-basis:3
+.connect-left p{
+    margin-top: 31px;
 }
 
-/*--------for mobiles-----------
+.connect-left p i{
+    color:#00ff2f;
+    margin-right:15px;
+    font-size: 25px;
+}
+
+.social-icons{
+    margin-top: 30px;
+}
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ffff;
+    display: inline-block;
+}
+/*--------for mobiles-----------*/
+nav .fa{
+    display: none;
+}
 @media only screen and (max-width: 600px){
     #header{
         background-image: url("haha.jpeg");
@@ -300,7 +319,7 @@ nav ul li a:hover::after{
     .header-text h1{
         font-size: 30px;
     }
-    nav .fas{
+    nav .fa{
         display:block;
         font-size:25px;
 
@@ -314,6 +333,7 @@ nav ul li a:hover::after{
         height: 100vh;
         padding-top: 50px;
         z-index: 2;
+        transition: right 0.5s;
     }
     nav ul li {
         display: block;
@@ -325,5 +345,24 @@ nav ul li a:hover::after{
         left: 25%;
 
     }
+    .sub-title{
+        font-size: 40px;
+    }
+    .About-col-1,.About-col-2{
+        flex-basis: 100%;
+    }
+    .About-col-1{
+        margin-bottom: 30px;
+    }
+    .About-col-2{
+        font-size: 14px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+    .connect-left{
+        flex-basis: 100%;
+
+    }
 }
-*/
